testdata/golden/sema/valid/alien_hints/python_none_alias.fmt
// Alien hints: Python-ish None alias (valid).

type None = nothing;

fn foo() -> None {
    let x: None = nothing;
    return x;
}
