testdata/golden/sema/invalid/alien_hints/python_none_type.fmt
fn foo() -> None {
    return nothing;
}

